[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies.import]
path = "crates/import"

[dependencies.types]
path = "crates/types"

[dependencies.utils]
path = "crates/utils"

[dependencies]
axum = "0.8.1"
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
lazy_static = "1.4.0"
log = "0.4.25"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
