[package]
name = "import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.types]
path = "../types"

[dependencies.utils]
path = "../utils"

[dependencies]
csv = "1.3.1"
env_logger = "0.11.6"
lazy_static = "1.4.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
rusqlite = { version = "0.29", features = ["bundled"] }